--- a/pom.xml
+++ b/pom.xml
@@ -322,10 +322,16 @@
         <repository>
             <id>portal-nexus-releases</id>
             <url>https://server.stijnhooft.be/nexus/repository/maven-releases/</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
         <repository>
             <id>portal-nexus-snapshots</id>
             <url>https://server.stijnhooft.be/nexus/repository/maven-snapshots/</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
