--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,9 @@ spring.cloud.stream.default.contentType=application/json
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 baseUrl=https://please_overwrite/
+
+# actuator
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.allowed-headers=*
+management.endpoints.web.cors.allowed-methods=*
