--- a/pom.xml
+++ b/pom.xml
@@ -85,15 +85,8 @@
         <dependency>
             <groupId>be.stijnhooft</groupId>
             <artifactId>portal-model</artifactId>
-            <version>1.0.2</version>
+            <version>1.2.0-SNAPSHOT</version>
         </dependency>
-
-        <dependency>
-            <groupId>be.stijnhooft</groupId>
-            <artifactId>portal-notifications-model</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
