--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.12.RELEASE</version>
+        <version>2.4.13</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
 
@@ -74,7 +74,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Hoxton.RELEASE</version>
+                <version>2020.0.6</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
