--- a/src/test/resources/application-local.properties
+++ b/src/test/resources/application-local.properties
@@ -3,3 +3,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.HSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
