--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.rabbitmq.port=@rabbitmq-port@
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 spring.cloud.stream.bindings.eventChannel-in-0.destination=eventTopic
-spring.cloud.stream.bindings.notification-out-0.destination=notificationTopic
+spring.cloud.stream.bindings.notificationChannel-out-0.destination=notificationTopic
 spring.cloud.stream.default.contentType=application/json
 
 #https://github.com/pgjdbc/pgjdbc/issues/1102
